technitium/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: technitium-dnsserver
  namespace: technitium
  labels:
    app.kubernetes.io/name: technitium-dnsserver
    app.kubernetes.io/version: "15.6.0"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: technitium-dnsserver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: technitium-dnsserver
        app.kubernetes.io/version: "15.6.0"
    spec:
      serviceAccountName: technitium-service-account
      automountServiceAccountToken: false
      enableServiceLinks: false
      dnsPolicy: ClusterFirst
      securityContext: {}
      volumes:
        - name: technitium-volume
          persistentVolumeClaim:
            claimName: technitium-dnsserver-pvc
      containers:
        - name: technitium-dnsserver
          image: "technitium/dns-server:15.6.0"
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE  # required to bind to port 53
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: http
              containerPort: 5380
              protocol: TCP
          volumeMounts:
            - name: technitium-volume
              mountPath: /etc/dns
          startupProbe:
            tcpSocket:
              port: 5380
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 1
          livenessProbe:
            tcpSocket:
              port: 5380
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            tcpSocket:
              port: 5380
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
