technitium/servicedns.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium-dns-service
  namespace: technitium
  labels:
    app.kubernetes.io/name: technitium-dnsserver
    app.kubernetes.io/version: "15.5.1"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.20.199
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: technitium-dnsserver
  ports:
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: dns-tcp
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: dns-udp
