technitium/serviceweb.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium-web-service
  namespace: technitium
  labels:
    app.kubernetes.io/name: technitium-dnsserver
    app.kubernetes.io/version: "15.6.0"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: technitium-dnsserver
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
